using System.Threading.Tasks;
using Grpc.Core;
using FlinkDotNet.JobManager.InternalApi.Grpc; // Namespace from our .proto csharp_namespace option
using Microsoft.Extensions.Logging; // For optional logging

// Assuming the generated base class is JobManagerInternalService.JobManagerInternalServiceBase
// The actual name depends on the .proto service definition and Grpc.Tools generation.

namespace FlinkDotNet.JobManager.Services
{
    public class JobManagerInternalApiService : JobManagerInternalService.JobManagerInternalServiceBase
    {
        private readonly ILogger<JobManagerInternalApiService> _logger;

        public JobManagerInternalApiService(ILogger<JobManagerInternalApiService> logger)
        {
            _logger = logger;
        }

        public override Task<ReportStateCompletionReply> ReportStateCompletion(ReportStateCompletionRequest request, ServerCallContext context)
        {
            _logger.LogInformation($"gRPC: ReportStateCompletion called for CheckpointId: {request.CheckpointId}, Operator: {request.OperatorInstanceId}");
            // In a real implementation, process the state completion.
            return Task.FromResult(new ReportStateCompletionReply
            {
                Ack = true
            });
        }

        public override Task<RequestCheckpointReply> RequestCheckpoint(RequestCheckpointRequest request, ServerCallContext context)
        {
            _logger.LogInformation($"gRPC: RequestCheckpoint called for CheckpointId: {request.CheckpointId}");
            // In a real implementation, this would trigger checkpointing logic on a TaskManager.
            return Task.FromResult(new RequestCheckpointReply
            {
                Accepted = true
            });
        }

        public override Task<RequestRecoveryReply> RequestRecovery(RequestRecoveryRequest request, ServerCallContext context)
        {
            _logger.LogInformation($"gRPC: RequestRecovery called for JobId: {request.JobId}, CheckpointId: {request.CheckpointId}");
            // In a real implementation, this would initiate recovery procedures.
            return Task.FromResult(new RequestRecoveryReply
            {
                RecoveryInitiated = true
            });
        }

        public override Task<HeartbeatReply> Heartbeat(HeartbeatRequest request, ServerCallContext context)
        {
            _logger.LogInformation($"gRPC: Heartbeat received from JobId: {request.JobId}, Operator: {request.OperatorInstanceId}, Status: {request.HealthStatus}");
            // In a real implementation, update heartbeat status, check for timeouts, etc.
            return Task.FromResult(new HeartbeatReply
            {
                Ack = true
            });
        }
    }
}
